--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -192,15 +192,15 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/trident3" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -208,12 +208,33 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="200dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+        android:id="@+id/Quote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:text="Your Goals Are Not The Finish Line,"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <TextView
+            android:id="@+id/Quote2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:text="They Are Only The Beginning"
+            android:textColor="@android:color/white"
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/Quote" />
+
 
         <TextView
             android:id="@+id/YouAreString"
@@ -223,7 +244,7 @@
             android:text="You Are"
             android:textColor="@android:color/white"
             android:textSize="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/Quote2" />
 
         <TextView
             android:id="@+id/UserTitle"
@@ -235,6 +256,7 @@
             app:layout_constraintTop_toBottomOf="@+id/YouAreString" />
     </LinearLayout>
 
+    <!--
     <TextView
         android:id="@+id/XCo"
         android:layout_width="wrap_content"
@@ -264,6 +286,7 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/YCo" />
+     -->
 
     <!--
     <LinearLayout
