--- a/app/src/main/res/layout/activity_pop_up_info.xml
+++ b/app/src/main/res/layout/activity_pop_up_info.xml
@@ -4,20 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:alpha="0.9"
-    android:background="@drawable/cardviewbackground1"
+
     tools:context="com.example.rossg_000.fyp_v3.PopUpInfo">
 
     <TextView
         android:id="@+id/TaskPopUpInfo"
-        android:layout_width="300dp"
-        android:layout_height="600dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:fontFamily="serif"
         android:text="TextView"
+        android:alpha="0.9"
+        android:background="@drawable/cardviewbackground1"
         android:textColor="@android:color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
